# static_reflect

./: .gitignore  CMakeLists.txt  static_reflect.h  static_reflect_json.h
.cache/clangd/index/: example_complex.cpp.D4B00302DA1240FE.idx  example_pybind.cpp.AF65CB0CFB53688B.idx  example_static_reflect.cpp.74D7BA3AFEF28E08.idx  example_static_reflect.h.670764D934B2ECB9.idx  static_reflect_json.h.15A4E0F5E287415D.idx
example/: example_complex.cpp  example_static_reflect.cpp
