cmake_minimum_required(VERSION 3.28)
project(mine)
set(CMAKE_CXX_STANDARD 23)
find_package(jsoncpp REQUIRED)

file(GLOB example "example/*.cpp")
foreach (filename ${example})
    get_filename_component(name ${filename} NAME_WE)
    add_executable(${name} static_reflect.h static_reflect_json.h ${filename} )
    target_link_libraries(${name} jsoncpp)
endforeach ()
